<resources>
    <!-- App name -->
    <string name="rakenduse_pealkiri">Musician´s Diary</string>

    <string name="tund">hour</string>
    <string name="tundi">hours</string>
    <string name="minut">minute</string>
    <string name="minutit">minutes</string>
    <string name="tere">Hello</string>


    <string name="ava_sahtel">Open</string>
    <string name="sule_sahtel">Close</string>

    <!-- Messages in case Google account selection failed -->
    <string name="konto_valimise_vea_pealkiri">Google account was not selected !</string>
    <string name="google_play_teenused_puuduvad_vea_pealkiri">Google Play Services are missing!</string>
    <string name="konto_valimise_vea_tekst">Google Drive connection was set off in settings.</string>

    <!-- Choose Google account ... -->
    <string name="konto_valimise_pealkiri">to store recordings</string>


    <!-- Google Drive configuration error messages -->
    <string name="google_drive_uhenduse_vea_pealkiri">Google Drive configuration error!</string>
    <string name="google_drive_uhenduse_vea_tekst">Check application permissions from system Settings.</string>


    <!-- Example Song data - Name, Author, Comment -->
    <string name="naidislugu">Love me like You do</string>
    <string name="looautor">Ellie Goulding</string>
    <string name="lookommentaar">In the Official Top 40 Biggest Songs of 2015</string>

    <!-- User has practiced Love me like You do three times with descriptions below -->
    <string name="harjutusekirjeldus1">First time</string>
    <string name="harjutusekirjeldus2">Second time</string>
    <string name="harjutusekirjeldus3">5 times</string>


    <!-- Menu names -->
    <string name="lisa_teos">Add song…</string>
    <!-- Songs can be marked as archived -->
    <string name="naita_arhiivi">Show archived</string>
    <!-- Excercise and Practice are the equivalents -->
    <string name="kusututa">Delete exercise…</string>
    <string name="AlustaUutHarjutust">Start exercise…</string>
    <string name="LisaTehtudHarjutus">Add exercise …</string>


    <!-- Select month for report -->
    <string name="vali_aruande_kuu">Pick month</string>
    <integer name="kuudearv">6</integer>

    <!-- Buttons -->
    <string name="ok">OK</string>
    <string name="loobu">Cancel</string>
    <string name="jah">Yes</string>
    <string name="ei">No</string>

    <!-- Start, Stop or Resume measuring time -->
    <string name="alusta">Start</string>
    <string name="katkesta">Stop</string>
    <string name="jatka">Resume</string>
    <!-- Microphone On or Off -->
    <string name="sees">On</string>
    <string name="valjas">Off</string>


    <!-- Reporting -->
    <string name="aruanne_saada">Send report…</string>
    <string name="aruanne_eposti_rakendus_puudub">email application not found…</string>

    <string name="aruanne_koondi_pealkiri">Summary</string>
    <string name="aruanne_soovituslik_harjutamise_aeg">Recommended daily practice time : </string>
    <string name="aruanne_soovituslik_harjutamise_aeg_kokku">Recommended total practice time : </string>
    <string name="aruanne_tegelik_harjutamise_aeg_kokku">Actual total practice time : </string>
    <string name="aruanne_salvestatud_harjutused">Recorded exercises</string>
    <string name="aruanne_paevade_kaupa">Report by day</string>
    <!-- Signature part at the end of report -->
    <string name="aruanne_tervitades">Greetings, </string>
    <string name="aruanne_pillipaeviku_vahendusel"> via Musicians Diary</string>

    <!-- Error messsages why report can't be created -->
    <string name="aruande_tegemise_hoiatuse_pealkiri">Unable to create report</string>
    <string name="aruande_tegemise_keeldumise_pohjus">Fill in your first name,surname and instrument in the settings!</string>



    <!-- Settings  -->
    <string name="seaded_tiitel">Settings</string>
    <string name="seadete_fail">seadete_fail</string>
    <string name="minu_eesnimi_vihje">My first name</string>
    <string name="minu_perenimi_vihje">My last name</string>
    <string name="minu_e_post_vihje">My e-mail</string>
    <string name="muusikakooli_nimi_vihje">My music school</string>
    <string name="klass_vihje">Class</string>
    <string name="pill_vihje">My instrument</string>
    <string name="opetaja_eesnimi_vihje">My teacher\'s first name</string>
    <string name="opetaja_perenimi_vihje">My teacher\'s last name</string>
    <string name="opetaja_e_post_vihje">My teacher\'s e-mail</string>
    <string name="harjutamise_norm_vihje">Minutes to practice in a day</string>
    <string name="stopperiautostart">Autostart stopwatch</string>
    <string name="pikkvajutusalustabharjutuse">Long press on song list item starts new practice</string>
    <string name="naitateosetanaststatistikat">Show current day statistics</string>
    <string name="kasLubadaMikrofonigaSalvestamine">Allow recording</string>
    <string name="kasKasutadaGoogleDrive">Use Google Drive</string>
    <string name="GoogleDriveVajalikkus">Google Drive is needed to add recordings to a report</string>
    <string name="google_konto_vihje">Google account</string>


    <!-- Information page -->
    <string name="teave_tiitel">Information</string>
    <string name="teave_laen">Loading…</string>
    <string name="teave_google_kasutus">Mucisian\'s Diary uses Google Services. See information below</string>
    <string name="privaatsus_eeskirjad">Privacy Policy https://sites.google.com/site/musiciansdiaryprivacypolicy/"</string>

    <!-- Excercise log -->
    <string name="title_activity_harjutuste_kalender">Exercise log</string>


    <!-- Song related texts -->
    <string name="snackbar_anna_teosele_nimi">Give a name to a song</string>
    <string name="snackbar_teos_juba_olemas">A song with given name already exists</string>
    <string name="snackbar_nimi_tuhi">Name is empty</string>
    <string name="dialog_kas_kustuta_teose_pealkiri">Delete song?</string>
    <string name="dialog_kas_kustuta_teose_kusimus_osa1">You are about to delete a song</string>
    <string name="dialog_kas_kustuta_teose_kusimus_osa2">and all its exercises. Delete ?</string>

    <!-- Descriptions for Song fields - name, author, comment -->
    <string name="nimi_vihje">Name. For example Yesterday</string>
    <string name="autor_vihje">Author. For example John Lennon</string>
    <string name="kommentaar_vihje">Comment</string>

    <string name="arhiivis">Archived</string>

    <string name="tana">Today</string>
    <string name="nadal">Week</string>
    <string name="kuu">Month</string>


    <!-- Excerice/Practice or Recording (via microphone) deleteing -->
    <string name="dialog_kas_kustuta_harjutuse_kusimus">Delete exercise</string>
    <string name="dialog_kas_kustuta_salvestuse_kusimus">Delete recording ?</string>
    <string name="snackbar_harjutuse_automaatne_kustutamine">Exercise with no duration deleted !</string>

    <!-- Error messages when selecting date and time -->
    <string name="ajamuutmine_aeg_tulevikus">You have chosen a future time! The time wasn´t changed!</string>
    <string name="muuda_harjutuse_kestust">Choose duration</string>

    <!-- New practice session -->
    <string name="harjutuse_kirjeldus_vihje">What are you planning to practice …</string>
    <string name="stopper">00:00:00</string>
    <string name="vaikimisisharjutusekirjeldus">I played</string>

    <!-- Adding exercise later -->
    <string name="harjutuse_mida_harjutasid_vihje">What did you practice …</string>
    <string name="harjutus_algas">Started :</string>
    <string name="harjutus_loppes">Ended : </string>
    <string name="harjutuse_kestus">Duration : </string>
    <string name="harjutus_minutit">minutes</string>


    <!-- Help texts -->
    <string name="link_aruandel_kysimus">On report</string>
    <string name="eisaamuutaharjutustjuhend">
        Only the name of the practice session can be altered. To change practice times, delete this session and create a new one.
    </string>
    <string name="lisatehtudharjutustjuhend">
        Add a practice session you had without the Musicians Diary. In addition to entering a starting and ending point, you are able to decrease the practice duration if necessary.
    </string>
    <string name="uusharjutustjuhend">
        If recording and listening is allowed in the settings you can record your practice with a microphone. If using Google Drive is allowed you can add recordings to reports.
    </string>

    <string name="jagamise_keeldumise_pealkiri">Unable share recording</string>
    <string name="jagamise_keeldumise_pohjus">Fill in your first name,surname and instrument in the settings!</string>

    <string name="jagamise_teema_harjutus">exercise</string>
    <string name="jagamise_sisu_link_harjutusele">Link to recording</string>

    <!-- Navigation bar texts -->
    <string name="menyyvalik_harjutuste_kalender">Practice calendar</string>
    <string name="menyyvalik_saada_aruanne">Send report</string>
    <string name="menyyvalik_saada_satted">Settings</string>
    <string name="menyyvalik_saada_teave">Information</string>

    <!-- Activitite tagasiside koodid -->
    <integer name="TEOSLIST_ACTIVITY_INTENT_MUUDA">1</integer>
    <integer name="TEOS_ACTIVITY_RETURN_MUUDETUD">2</integer>
    <integer name="TEOS_ACTIVITY_RETURN_KUSTUTATUD">3</integer>

    <integer name="TEOS_ACTIVITY_INTENT_HARJUTUS_UUS">4</integer>
    <integer name="HARJUTUS_ACTIVITY_RETURN_UUS_LISATUD">5</integer>
    <integer name="HARJUTUS_ACTIVITY_RETURN_UUS_LOOMATA">12</integer>

    <integer name="TEOS_ACTIVITY_INTENT_HARJUTUS_TEHTUD">6</integer>
    <integer name="HARJUTUS_ACTIVITY_RETURN_TEHTUD_LISATUD">13</integer>
    <integer name="HARJUTUS_ACTIVITY_RETURN_TEHTUD_LOOMATA">14</integer>

    <integer name="TEOS_ACTIVITY_INTENT_HARJUTUS_MUUDA">7</integer>
    <integer name="HARJUTUS_ACTIVITY_RETURN_MUUDA">8</integer>
    <integer name="HARJUTUS_ACTIVITY_RETURN_KUSTUTATUD">15</integer>

    <integer name="TEOSLIST_ACTIVITY_INTENT_LISA">9</integer>
    <integer name="TEOS_ACTIVITY_RETURN_LISATUD">10</integer>
    <integer name="TEOS_ACTIVITY_RETURN_UUS_LOOMATA">11</integer>

    <integer name="KALENDER_ACTIVITY_START">16</integer>
    <integer name="KALENDER_ACTIVITY_INTENT_HARJUTUS_MUUDA">12</integer>

    <integer name="SEADED_ACTIVITY_START">17</integer>

    <integer name="GOOGLE_DRIVE_PAIGALDUS">1000</integer>

</resources>
