...

    <group
            android:id="@+id/alumine"
            android:checkableBehavior="none">

        <item
                android:id="@+id/seaded"
                android:icon="@drawable/ic_settings_green"
                android:title="@string/menyyvalik_saada_satted" >
        </item>
        <item
                android:id="@+id/teave"
                android:icon="@drawable/ic_info_blue"
...
